package patterns.creational.builder;

public class Pizza {
    private String hamur = "";
    private String sos = "";
    private String malzeme = "";

    public void setHamur(String hamur) {
        this.hamur = hamur;
    }

    public void setSos(String sos) {
        this.sos = sos;
    }

    public void setMalzeme(String malzeme) {
        this.malzeme = malzeme;
    }
}
